# AdlibPredict

./: .env  .gitignore  README.md  main.py  pyproject.toml  run.sh
adlibpredict/: __init__.py  _objects.py  detect.py
hooks/: __init__.py
hooks/client/: __init__.py  _handler.py  handler.py
hooks/server/: README.md  __init__.py  handler.py  start-server.sh
hooks/server/mavproxy/: __init__.py  _action.py  _const.py
model/: preprocess.py  train.py
model/inference/: predict_image.py
mp/: script.py
rtsp/: run-server.sh  server.py
rtsp/server/: __init__.py  core.py  run.py  wrokers.py
scripts/: detect.py
server/: image_capture.py  run_model.py
tests/: check-gpu.test.py  client-hooks.test.py  cv2-0-cap.test.py  cv2-rtsp-cap.test.py  detector.test.py  model-predict.test.py  module.test.py  rtsp-conn.test.py  server-hooks.test.py
