[project]
name = "adlibpredict"
version = "0.0.0"
description = "script for nidar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.128.0",
  "opencv-contrib-python==4.12.0.88",
  "opencv-contrib-python-headless==4.12.0.88",
  "opencv-python==4.12.0.88",
  "opencv-python-headless==4.12.0.88",
  "platformdirs==4.5.1",
  "pydantic==2.12.5",
  "python-dotenv>=1.2.1",
  "requests==2.32.5",
  "rich>=14.2.0",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "ultralytics>=8.3.248",
  "uvicorn==0.40.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
